--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               }
             }
           }
-          var contenido = "<p>" + avion.label.text + "</p><p>" + plane_text + "</p><p>" + seat_text + " Asientos</p><p>Aerolinea "+ airline_text + "</p>" + "Posicion:" + avion.position;
+          var contenido = "<p>" + avion.label.text + "</p><p>" + plane_text + "</p><p>" + seat_text + " Asientos</p><p>Aerolinea"+ airline_text + "</p>" + "Posicion:" + avion.position;
           var ventana_info = new google.maps.InfoWindow({
             content: contenido
              });
@@ -220,6 +220,17 @@
           for (i = 0; i < aviones.length; i++){
             if (aviones[i] != undefined){
               if (aviones[i].code == msg.code){
+                var orig = {lat: aviones[i].position[0], lng: aviones[i].position[1]}
+                var dest = {lat: msg.position[0], lng: msg.position[1]}
+                var flightPlanCoordinates = [orig, dest];
+                var flightPath = new google.maps.Polyline({
+                  path: flightPlanCoordinates,
+                  geodesic: true,
+                  strokeColor: '#FFF000',
+                  strokeOpacity: 1.0,
+                  strokeWeight: 2
+                });
+                flightPath.setMap(map);
                 markers_aviones[i].setMap(null);
                 delete aviones[i];
                 delete markers_aviones[i];
